# sent_graph_rag

./: .gitignore  README.md  original_requirements.txt  pyproject.toml  requirements.txt
data/: dataset_with_graphs.pkl  mit.gt  mit_wiki.txt
scripts/: create_graph_dataset.ipynb  graph.html  mit_graph.ipynb  qa_dataset.avro  squad_conversion.ipynb  test_cuda.ipynb
src/sent_graph_rag/: __init__.py  functions.py
src/sent_graph_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sent_graph_rag/Datasets/: __init__.py  answer_path_dataset.py  embedder.py  graph.py  graph_creation.py  language_models.py  pastein.py  readers.py  sentence_graph_dataset.py
tests/: graph_dataset_tests.ipynb  guide.json  test.json  test_answer_paths.py  test_graph.py  test_graph_dataset.py  test_load_model.py
