[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sent_graph_rag"
version = "0.1.0"
description = "Sentence Graph RAG system for enhanced retrieval augmented generation"
authors = [{ name = "Tyrin Todd", email = "swagginty@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "spacy>=3.0.0",
    "fastcoref",
    "pyarrow",
    "pandas",
    "sentence-transformers",
    "torch>=1.7.0",
    "transformers",
    "datasets",
    "pyvis==0.1.9",
    "disjoint_set",
    "fastavro",
    "lmdb",
    "igraph"

]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
visualization = [
    "networkx",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
